// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BareMetalAsset Resolver Correctly Resolves BareMetalAsset Query 1`] = `
Object {
  "data": Object {
    "bareMetalAsset": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "INTERNAL_SERVER_ERROR",
        "exception": Object {
          "stacktrace": Array [
            "TypeError: Cannot read property 'bmc' of undefined",
            "    at BareMetalAssetModel.getSingleBareMetalAsset (/Users/fxiang/workspaces/console-api/src/v2/models/bare-metal-asset.js:64:33)",
            "    at processTicksAndRejections (internal/process/task_queues.js:97:5)",
          ],
        },
      },
      "locations": Array [
        Object {
          "column": 11,
          "line": 3,
        },
      ],
      "message": "Cannot read property 'bmc' of undefined",
      "path": Array [
        "bareMetalAsset",
      ],
    },
  ],
}
`;

exports[`BareMetalAsset Resolver Correctly Resolves BareMetalAssetSubresources Query 1`] = `
Object {
  "data": Object {
    "bareMetalAssetSubresources": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "INTERNAL_SERVER_ERROR",
        "exception": Object {
          "stacktrace": Array [
            "TypeError: Cannot read property 'bmc' of undefined",
            "    at BareMetalAssetModel.getSingleBareMetalAsset (/Users/fxiang/workspaces/console-api/src/v2/models/bare-metal-asset.js:64:33)",
            "    at processTicksAndRejections (internal/process/task_queues.js:97:5)",
            "    at async Promise.all (index 1)",
            "    at BareMetalAssetModel.getBareMetalAssetSubresources (/Users/fxiang/workspaces/console-api/src/v2/models/bare-metal-asset.js:228:42)",
          ],
        },
      },
      "locations": Array [
        Object {
          "column": 11,
          "line": 3,
        },
      ],
      "message": "Cannot read property 'bmc' of undefined",
      "path": Array [
        "bareMetalAssetSubresources",
      ],
    },
  ],
}
`;

exports[`BareMetalAsset Resolver Correctly Resolves BareMetalAssets Query 1`] = `
Object {
  "data": Object {
    "bareMetalAssets": Array [],
  },
}
`;

exports[`BareMetalAsset Resolver Correctly Resolves CreateBareMetalAsset Query 1`] = `
Object {
  "data": Object {
    "createBareMetalAsset": Object {
      "bmaResult": Object {
        "apiVersion": "v1",
        "code": 404,
        "details": Object {
          "kind": "namespaces",
          "name": "fake-cluster",
        },
        "kind": "Status",
        "message": "namespaces \\"fake-cluster\\" not found",
        "metadata": Object {},
        "reason": "NotFound",
        "status": "Failure",
      },
      "patchedSecretResult": Object {
        "apiVersion": "v1",
        "code": 405,
        "details": Object {},
        "kind": "Status",
        "message": "the server does not allow this method on the requested resource",
        "metadata": Object {},
        "reason": "MethodNotAllowed",
        "status": "Failure",
      },
      "secretResult": Object {
        "apiVersion": "v1",
        "code": 404,
        "details": Object {
          "kind": "namespaces",
          "name": "fake-cluster",
        },
        "kind": "Status",
        "message": "namespaces \\"fake-cluster\\" not found",
        "metadata": Object {},
        "reason": "NotFound",
        "status": "Failure",
      },
      "statusCode": 404,
    },
  },
}
`;

exports[`BareMetalAsset Resolver Correctly Resolves DeleteBareMetalAsset Query 1`] = `
Object {
  "data": Object {
    "deleteBareMetalAssets": Object {
      "errors": Array [
        Object {
          "message": "baremetalassets.inventory.open-cluster-management.io \\"undefined\\" not found",
          "statusCode": 404,
        },
      ],
      "message": "Failed to delete 1 bare metal asset(s)",
      "statusCode": 500,
    },
  },
}
`;

exports[`BareMetalAsset Resolver Correctly Resolves UpdateBareMetalAsset Query 1`] = `
Object {
  "data": Object {
    "updateBareMetalAsset": null,
  },
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "INTERNAL_SERVER_ERROR",
        "exception": Object {
          "stacktrace": Array [
            "TypeError: Cannot read property 'bmc' of undefined",
            "    at BareMetalAssetModel.updateBareMetalAsset (/Users/fxiang/workspaces/console-api/src/v2/models/bare-metal-asset.js:402:31)",
            "    at processTicksAndRejections (internal/process/task_queues.js:97:5)",
          ],
        },
      },
      "locations": Array [
        Object {
          "column": 11,
          "line": 3,
        },
      ],
      "message": "Cannot read property 'bmc' of undefined",
      "path": Array [
        "updateBareMetalAsset",
      ],
    },
  ],
}
`;
